solution/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop
  labels:
    app: workshop
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1 
  replicas: 1
  selector:
    matchLabels:
      app: workshop
  template:
    metadata:
      labels:
        app: workshop
    spec:
      containers:
      - name: return-version
        image: ghcr.io/blixhavn/return-version:1.0.0
        ports:
        - containerPort: 8000
