solution/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workshop
spec:
  selector:
    app: workshop
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
